# xdrawchem

./: README.md
.github/workflows/: build-deb.yml  build-rpm.yml  ci.yml  release.yml
xdrawchem-qt5/: CMakeLists.txt  NOTES.md  PACKAGING.md  README.md
xdrawchem-qt5/SPECS/: xdrawchem.spec
xdrawchem-qt5/debian/: changelog  control  rules  watch  xdrawchem-doc.install  xdrawchem.install
xdrawchem-qt5/tests/: CMakeLists.txt  tst_aromaticity.cpp
xdrawchem-qt5/translation/: xdrawchem_de.ts  xdrawchem_fr.ts  xdrawchem_nl.ts
xdrawchem-qt5/xdrawchem/: application.cpp  application_ob.cpp  application_ring.cpp  bond.cpp  bondedit.cpp  cdxml_reader.cpp  charsel.cpp  chemdata.cpp  chemdata.h  chemdata_edit.cpp  chemdata_tools.cpp  chemdata_xdc.cpp  crings_dialog.cpp  defs.h  drawable.cpp  dyk.cpp  fixeddialog.cpp  gobject.cpp  graphdialog.cpp  graphwidget.cpp  helpwindow.cpp  http.cpp  http.h  ioiface.cpp  main.cpp  molecule.cpp  molecule.h  molecule_1h_nmr.cpp  molecule_obmol.cpp  molecule_smiles.cpp  molecule_sssr.cpp  molecule_tools_1.cpp  molinfodialog.cpp  netaccess.cpp  netaccess.h  netchoosedialog.cpp  netdialog.cpp  ngw.cpp  pagesetupdialog.cpp  peptidebuilder.cpp  (+17 more)
